# rabbitmq_qt

./: .gitignore  CMakeLists.txt  README.md
integration-test/: CMakeLists.txt  Test_Integration.cpp
src/ConfigManager/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/RabbitMQClient/: CMakeLists.txt  IRabbitmqConnection.h  RabbitmqConnection.cpp  RabbitmqConnection.h  rabbitmqEntities.cpp  rabbitmqEntities.h  validation.cpp  validation.h
src/client/: CMakeLists.txt  Client.cpp  Client.h  ConfigDialog.cpp  ConfigDialog.h  MainWindow.cpp  MainWindow.h  MessageReceiverThread.h  main.cpp
src/protocol/: CMakeLists.txt  Messages.proto
src/server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
test/client/: CMakeLists.txt  Test_Client.cpp
test/common/: mocks.h
test/server/: CMakeLists.txt  Test_Server.cpp
